--- a/.github/workflows/test-update.yml
+++ b/.github/workflows/test-update.yml
@@ -49,7 +49,7 @@ jobs:
 
       # Build the application
       - name: Build & bundle application (Tauri)
-        run: npm run tauri -- build
+        run: npm run tauri -- build --config src-tauri/tauri.conf.test.json --verbose
 
       - name: Extract metadata (product name & version)
         id: meta
