--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rscoop",
-  "version": "1.4.8-beat.6",
+  "version": "1.4.8-beta.6",
   "description": "",
   "type": "module",
   "scripts": {
