refactor(settings): replace theme toggle with dropdown selection
- Replace checkbox toggle with select dropdown for theme selection
- Update locale strings to use light_mode and dark_mode instead of switch_to_dark/light
- Remove unused handleThemeChange function
- Modify theme setting logic to work with select input
- Update both English and Chinese localization files
- Remove sync-locales command from build process in tauri.conf.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "tauri": "tauri",
-    "sync-locales": "cp -r src/locales/* src-tauri/resources/locales/ 2>/dev/null || copy src\\locales\\* src-tauri\\resources\\locales\\ >nul 2>&1 || echo 'Locale sync completed'"
+    "sync-locales": "copy /Y src\\locales\\* src-tauri\\resources\\locales\\ >nul 2>&1 || echo 'Locale sync completed'"
   },
   "license": "MIT",
   "dependencies": {
