feat(powershell): add PowerShell executable selection and management
- Implemented dynamic PowerShell executable switching between pwsh and powershell
- Added automatic detection of available PowerShell versions on the system
- Created settings UI component for selecting preferred PowerShell executable
- Introduced static variable for runtime PowerShell executable configuration
- Added Tauri commands for getting available executables and setting preferences
- Integrated PowerShell settings into application store with persistence
- Updated initialization logic to apply PowerShell settings at startup

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "tauri": "tauri",
-    "sync-locales": "copy /Y src\\locales\\* src-tauri\\resources\\locales\\ >nul 2>&1 || echo 'Locale sync completed'"
+    "i18n": "copy /Y src\\locales\\* src-tauri\\resources\\locales\\ >nul 2>&1 || echo 'Locale sync completed'"
   },
   "license": "MIT",
   "dependencies": {
