--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,39 +1,39 @@
 version: 2
 updates:
   # Frontend dependencies (Node.js)
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "weekly"
+      interval: 'weekly'
     open-pull-requests-limit: 5
     reviewers:
-      - "Kwensiu"
+      - 'Kwensiu'
     assignees:
-      - "Kwensiu"
+      - 'Kwensiu'
     commit-message:
-      prefix: "deps"
-      include: "scope"
+      prefix: 'deps'
+      include: 'scope'
     groups:
       security-updates:
         applies-to: security-updates
         patterns:
-          - "*"
+          - '*'
 
   # Rust dependencies
-  - package-ecosystem: "cargo"
-    directory: "/src-tauri"
+  - package-ecosystem: 'cargo'
+    directory: '/src-tauri'
     schedule:
-      interval: "weekly"
+      interval: 'weekly'
     open-pull-requests-limit: 5
     reviewers:
-      - "Kwensiu"
+      - 'Kwensiu'
     assignees:
-      - "Kwensiu"
+      - 'Kwensiu'
     commit-message:
-      prefix: "deps"
-      include: "scope"
+      prefix: 'deps'
+      include: 'scope'
     groups:
       security-updates:
         applies-to: security-updates
         patterns:
-          - "*"
+          - '*'
