refactor(ui): restructure UI components, update theming system, and improve layouts
- Refactor CSS theme system with custom properties for better maintainability
- Update component backgrounds and borders for consistent theming
- Update localization keys for better UI messaging
- Adjust window minimum width in Tauri configuration
- Improve modal and card styling consistency across components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "i18n-ally.autoDetection": false,
   "i18n-ally.namespace": false,
   "i18n-ally.pathMatcher": "{locale}.json",
-  "i18n-ally.keystyle": "flat",
+  "i18n-ally.keystyle": "nested",
   "i18n-ally.enabledFrameworks": ["custom"],
   "i18n-ally.usage.scanningIgnore": [],
   "i18n-ally.editor.preferEditor": true,
