--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pailer",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "type": "module",
   "scripts": {
@@ -10,6 +10,7 @@
     "serve": "vite preview",
     "tauri": "tauri",
     "i18n": "(copy /Y src\\locales\\* src-tauri\\resources\\locales\\ >nul 2>&1 || echo 'Locale sync completed') && node scripts/i18n/generate-dict-types.js",
+    "bump-version": "node scripts/bump-version.js",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
