--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,19 +82,28 @@ jobs:
         shell: pwsh
         run: |
           $cfg = Get-Content src-tauri/tauri.conf.json | ConvertFrom-Json
-          
-          # 调试输出 - 用正确语法
+
+          $product = $cfg.productName
+          $version = $cfg.version
+
+          # 防呆
+          if (-not $product) { Write-Error "productName not found"; exit 1 }
+          if (-not $version) { Write-Error "version not found"; exit 1 }
+
+          $exePath = "src-tauri/target/release/$product.exe"
+          \( installerPath = "src-tauri/target/release/bundle/nsis/ \){product}_${version}_x64-setup.exe"
+
           Write-Output "=== Extracted metadata ==="
-          Write-Output "version from config: $($cfg.version)"
-          Write-Output "productName from config: $($cfg.productName)"
-          Write-Output "exePath: src-tauri/target/release/$($cfg.productName).exe"
-          Write-Output "installerPath: src-tauri/target/release/bundle/nsis/$(\( cfg.productName)_ \)($cfg.version)_x64-setup.exe"
-          
-          # 原有输出逻辑
-          "version=$($cfg.version)" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-          "product=$($cfg.productName)" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-          "exePath=src-tauri/target/release/$($cfg.productName).exe" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-          "installerPath=src-tauri/target/release/bundle/nsis/$(\( cfg.productName)_ \)($cfg.version)_x64-setup.exe" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          Write-Output "version       : $version"
+          Write-Output "productName   : $product"
+          Write-Output "exePath       : $exePath"
+          Write-Output "installerPath : $installerPath"
+
+          # 正確寫入 GitHub output
+          echo "version=$version" >> $env:GITHUB_OUTPUT
+          echo "product=$product" >> $env:GITHUB_OUTPUT
+          echo "exePath=$exePath" >> $env:GITHUB_OUTPUT
+          echo "installerPath=$installerPath" >> $env:GITHUB_OUTPUT
 
       - name: Compress executable with UPX
         run: upx --best --lzma ${{ steps.meta.outputs.exePath }}
@@ -103,15 +112,22 @@ jobs:
         id: prepare
         shell: bash
         run: |
-          artifacts="${{ steps.meta.outputs.exePath }}
-          ${{ steps.meta.outputs.installerPath }}
+          artifacts="${{ steps.meta.outputs.exePath }}"
+          artifacts="$artifacts
+          ${{ steps.meta.outputs.installerPath }}"
+          artifacts="$artifacts
           ${{ steps.meta.outputs.installerPath }}.sig"
+
+          # 如果有 updater 的 latest.json 也加進去
           if [ -f "./src-tauri/target/release/bundle/nsis/latest.json" ]; then
             artifacts="$artifacts
           ./src-tauri/target/release/bundle/nsis/latest.json"
           fi
-          echo "=== Artifacts list ==="
+
+          echo "=== Artifacts to upload ==="
           echo "$artifacts"
+
+          # 多行輸出到 artifacts
           echo "artifacts<<EOF" >> $GITHUB_OUTPUT
           echo "$artifacts" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
