--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,21 +118,16 @@ jobs:
         id: prepare
         shell: bash
         run: |
-          artifacts="${{ steps.meta.outputs.exePath }}"
-          artifacts+=$'\n'"${{ steps.meta.outputs.installerPath }}"
+          # Create comma-separated list
+          artifacts="${{ steps.meta.outputs.exePath }},${{ steps.meta.outputs.installerPath }}"
           
           # Add updater artifacts if they exist
           if [ -f "src-tauri/target/release/bundle/nsis/latest.json" ]; then
-            artifacts+=$'\n'"src-tauri/target/release/bundle/nsis/latest.json"
+            artifacts+=",src-tauri/target/release/bundle/nsis/latest.json"
           fi
           
-          echo "=== Artifacts to upload ==="
-          echo "$artifacts"
-          
-          # Multiline output
-          echo "artifacts<<EOF" >> $GITHUB_OUTPUT
-          echo "$artifacts" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          echo "artifacts=$artifacts" >> $GITHUB_OUTPUT
+          echo "Prepared artifacts: $artifacts"
 
       - name: Upload artifacts to release
         uses: ncipollo/release-action@v1
